Bug 360521 - Simple shortcut in rules window isn't transfered to the text field
Summary: Simple shortcut in rules window isn't transfered to the text field
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 5.5.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-14 13:43 UTC by Kai Uwe Broulik
Modified: 2016-04-15 05:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-03-14 13:43:39 UTC
When I configure a custom rule for a window in KWin I can set a shortcut in Geometry & Access -> "Shortcut"; in the Edit menu there's a text field with a "Simple Shortcut" button. When I click the button I get a dialog with a KShortcut widget, the shortcut isn't transfered to the text field in the parent dialog, however.

Reproducible: Always

Steps to Reproduce:
1. Right click window decoration -> More Actions -> Custom settings for this program/window
2. Go to the third tab "Geometry & Access"
3. Check "Shortcut"
4. Chose any of the settings in the combobox (eg. "Force")
5. Click "Edit" button next to the text field
6. Click "Simple Shortcut" in the resulting dialog
7. Click the "None" button in the resulting dialog
8. Press a key combination
9. Click "OK"

Actual Results:  
The shortcut I just specified is not transfered to the text field in the parent dialog. I can enter something like Ctrl+Alt+B manually, however.

Expected Results:  
The shortcut I just specified is transfered to the textfield

Also note that the QDialogButtonBox is misplaced in the dialog, the OK/Cancel button is at the top rather than the bottom.
Comment 1 Kai Uwe Broulik 2016-03-21 09:29:06 UTC
Git commit f9da3fb0eb76dc9bb66c06b745a310d09689161f by Kai Uwe Broulik.
Committed on 21/03/2016 at 09:28.
Pushed by broulik into branch 'Plasma/5.6'.

[Window Rules] Fix simple shortcut not being transfered to text field

The dialog only had a "Close" button but the text was only transfered in accepted()

Also fix the position of the QDialogButtonBox which is swapped and so the buttons appear at the top.
FIXED-IN: 5.6.1

Differential Revision: https://phabricator.kde.org/D1173

M  +2    -2    kcmkwin/kwinrules/ruleswidget.cpp

http://commits.kde.org/kwin/f9da3fb0eb76dc9bb66c06b745a310d09689161f